# campus-compass

./: .env.defaults  .pre-commit-config.yaml  README.md  captain-definition  docker-compose.yml  sonar-project.properties  tox.ini
.github/workflows/: backend-updated.yml  deploy-backend.yml  deploy-frontend.yml  deploy-to-prod.yml  deploy-to-test.yml  frontend-updated.yml
backend/: Dockerfile  build.sh  docker-compose.yml  pyproject.toml
backend/app/: db.py  main.py
backend/app/apis/: admin.py  service.py  survey.py
backend/app/apis/base_api/: base_user_api.py
backend/app/models/: admin.py  db.py  event.py  post.py  service.py  survey.py  user.py
backend/app/models/intermediate_entities/: event_post.py
backend/app/schemas/: auth.py  profile.py
backend/app/services/: base.py  service.py  survey.py  user.py
backend/app/utils/: auth.py  database_url.py  hash.py
backend/migrations/: env.py
backend/migrations/versions/: 195f6e7635ea_changed_all_user_id_into_user_user_id.py  1a4a282ec606_fixed_user_id_field_in_post_entity.py  3cc247e46bde_deleted_survey_table.py  4ac92b3fe385_edited_model_relationship.py  a95fed07b5c8_initial_migration.py  bd161bfda58a_design_revision_implemented_2.py  c2c27ddcdecc_deleted_survey_table.py  e00274c8df71_initial_migration.py  e75e1a2374aa_initial_migration.py  ea14cca11a92_design_revision_implemented.py
backend/tests/: test_sample.py
frontend/: Dockerfile
frontend/app/: .eslintignore  .eslintrc.js  .prettierignore  .prettierrc  package-lock.json  package.json
frontend/app/.husky/: pre-commit
proxy/: default.conf
(+26 files in other folders)
